# iob2tensor

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml
.github/workflows/: docs.yml  publish.yml  tests.yml
api/: index.html
docs/: api.md  guide.md  tokenizers.md
guide/: index.html
iob2tensor/: __init__.py  annotations.py  checker.py  convert.py  labels.py  tokenizers.py
search/: search_index.json
src/iob2labels/: __init__.py  annotations.py  checker.py  encoder.py  labels.py  tokenizers.py
src/iob2tensor/: __init__.py  convert.py  labels.py  tokenizers.py
tests/: conftest.py  test_checker.py  test_create_map.py  test_decoder.py  test_encoder.py  test_get_entity_index_ranges.py  test_tokenizer_matrix.py  test_tokenizer_warning.py  test_tokenizers.py  test_validation.py  test_version.py
tokenizers/: index.html
