[project]
name = "iob2labels"
version = "0.3.0"
description = "Encode and decode IOB2 NER span annotations to and from integer label sequences aligned to any HuggingFace-compatible tokenizer."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ner", "named-entity-recognition", "iob2", "token-classification", "nlp", "tokenizers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "tokenizers>=0.15",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iob2labels"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Documentation = "https://cldixon.github.io/iob2tensor/"
Repository = "https://github.com/cldixon/iob2tensor"
Issues = "https://github.com/cldixon/iob2tensor/issues"

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=7.0",
    "pymdown-extensions>=10.0",
    "pytest>=8.4.2",
    "transformers>=4.40",
]
